[tool.poetry]
name = "hhru-parser-async"
version = "0.1.0"
description = ""
authors = ["Alex <al.m.zolotarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
