[tool.poetry]
name = "hhru-parser-async"
version = "0.1.0"
description = ""
authors = ["Alex <al.m.zolotarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.910"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
